--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,11 @@
   padding: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  background-color: #ecf0f1;
 }
 
 html {
-  color: #555;
+  color: #34495e;
   font-family: 'Lato', 'Arial', sans-serif;
   font-weight: 300;
   text-rendering: optimizeLegibility;
@@ -34,7 +35,8 @@ h3 {
 }
 
 h4 {
-  font-size: 3.2vw
+  font-size: 3.2vw;
+  background-color: #16a085;
 }
 
 @media only screen and (max-width: 767px) {
@@ -54,4 +56,28 @@ p {
 
 i {
   margin-right: 5px;
+}
+
+
+.scaling-button {
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1);
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1);
+  transition: all 200ms ease-in;
+  transform: scale(1);
+}
+
+.scaling-button:hover {
+  z-index: 2;
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1.1);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1.1);
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1.1);
+  transition: all 200ms ease-in;
+  transform: scale(1.1);
 }
