--- a/assets/style.css
+++ b/assets/style.css
@@ -81,3 +81,9 @@ i {
   transition: all 200ms ease-in;
   transform: scale(1.1);
 }
+
+@media only screen and (max-width: 767px) {
+    h2 {
+      font-size: 14vw;
+    }
+}
