--- a/assets/styles/button.css
+++ b/assets/styles/button.css
@@ -1,3 +1,14 @@
+.btn {
+  height: 2em;
+  width: 8em;
+  color: #ecf0f1;
+  font-weight: 400;
+  font-size: 1.5em;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 20px;
+  line-height: 2em;
+}
 
 .scaling-button {
   -webkit-transition: all 200ms ease-in;
