--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,7 +3,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-size: 2vw;
+  font-size: 16px;
 }
 
 html {
@@ -13,6 +13,7 @@ html {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(dictionary.jpeg);
   background-size: cover;
   background-position: center;
+  max-width: 1140px;
   height: 100vh;
   background-attachment: fixed;
 
